# sovereign-ethics-engine

./: .gitignore  LICENSE  README.md  pyproject.toml
sovereign_ethics_engine/: README.md  audit_log.md  context.py  detectors.py  ethics_engine.py
tests/: test_engine.py
