[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-ethics-engine"
version = "0.1.0"
description = "A sovereign, verifiable ethics engine with detectors, rules, and audit logging."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/capn1derfl/sovereign-ethics-engine"

[tool.pytest.ini_options]
pythonpath = ["."]
